syntax = "proto3";

// A backend message between browser and proxy.
message BackendMsg {
  enum Command {
    HELP = 0;
    CLOUD_UPLOAD = 1;
    LOCAL_SAVE = 2;
  }
  Command command = 1;
}
